{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 247,
  "lineage": "3b07510c-7eb0-53b9-e094-7900211836f1",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502157755713:internet-gateway/igw-094148cc1a900dc2c",
            "id": "igw-094148cc1a900dc2c",
            "owner_id": "502157755713",
            "tags": {
              "Name": "Main Gateway"
            },
            "tags_all": {
              "Name": "Main Gateway"
            },
            "vpc_id": "vpc-0b0228fad0ab16480"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502157755713:route-table/rtb-060e2963324f9c257",
            "id": "rtb-060e2963324f9c257",
            "owner_id": "502157755713",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094148cc1a900dc2c",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094148cc1a900dc2c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main Route Table"
            },
            "tags_all": {
              "Name": "Main Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0228fad0ab16480"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:502157755713:instance/i-04dca33e7c20460bd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04dca33e7c20460bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cb85b8938e2640d6",
            "private_dns": "ip-10-1-0-11.eu-west-2.compute.internal",
            "private_ip": "10.1.0.11",
            "public_dns": "ec2-18-133-243-250.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.243.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-002fd2c453d1a94ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00432dd82bc5976b3",
            "tags": {
              "Name": "Load Balancer"
            },
            "tags_all": {
              "Name": "Load Balancer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023b884f64310d67a"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.web_traffic",
            "module.subnet.aws_subnet.all_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "manager_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:502157755713:instance/i-06e9492d7bee8fc60",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e9492d7bee8fc60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074e1dbd9a04b6769",
            "private_dns": "ip-10-1-1-211.eu-west-2.compute.internal",
            "private_ip": "10.1.1.211",
            "public_dns": "ec2-35-178-189-31.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.189.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ccd33aecdb20752",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5cbc40ee38b57b8",
            "tags": {
              "Name": "Manager Node"
            },
            "tags_all": {
              "Name": "Manager Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023b884f64310d67a"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.web_traffic",
            "module.subnet.aws_subnet.all_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:502157755713:instance/i-04a1db1c53d9a3963",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a1db1c53d9a3963",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-045d1fe4a612124f1",
            "private_dns": "ip-10-1-1-165.eu-west-2.compute.internal",
            "private_ip": "10.1.1.165",
            "public_dns": "ec2-18-134-0-100.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.0.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09163eef15214a359",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5cbc40ee38b57b8",
            "tags": {
              "Name": "Worker Node"
            },
            "tags_all": {
              "Name": "Worker Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023b884f64310d67a"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.web_traffic",
            "module.subnet.aws_subnet.all_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04869a4a5f3d38531",
            "association_id": "eipassoc-0191bd77184a87bfb",
            "domain": "vpc",
            "id": "eipalloc-04869a4a5f3d38531",
            "instance": "i-04dca33e7c20460bd",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-057244784ae0796c6",
            "private_dns": "ip-10-1-0-51.eu-west-2.compute.internal",
            "private_ip": "10.1.0.51",
            "public_dns": "ec2-18-132-140-118.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.140.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Custom Elastic IP"
            },
            "tags_all": {
              "Name": "Custom Elastic IP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.instances.aws_instance.load_balancer",
            "module.security_groups.aws_network_interface.web_server_1",
            "module.security_groups.aws_security_group.web_traffic",
            "module.subnet.aws_subnet.all_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502157755713:network-interface/eni-057244784ae0796c6",
            "attachment": [
              {
                "attachment_id": "eni-attach-0e6015227e6883bf7",
                "device_index": 1,
                "instance": "i-04dca33e7c20460bd"
              }
            ],
            "id": "eni-057244784ae0796c6",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:99:58:8d:75:f4",
            "owner_id": "502157755713",
            "private_dns_name": "ip-10-1-0-51.eu-west-2.compute.internal",
            "private_ip": "10.1.0.51",
            "private_ips": [
              "10.1.0.50",
              "10.1.0.51"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-023b884f64310d67a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00432dd82bc5976b3",
            "tags": {
              "Name": "Main Web Server"
            },
            "tags_all": {
              "Name": "Main Web Server"
            }
          },
          "dependencies": [
            "module.instances.aws_instance.load_balancer",
            "module.security_groups.aws_security_group.web_traffic",
            "module.subnet.aws_subnet.all_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502157755713:security-group/sg-023b884f64310d67a",
            "description": "Allow inbound and outbound web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023b884f64310d67a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Back End",
                "from_port": 9966,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9966
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Front End",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web Traffic",
            "name_prefix": "",
            "owner_id": "502157755713",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow Web Traffic"
            },
            "tags_all": {
              "Name": "Allow Web Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0228fad0ab16480"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eee1f052436a997",
            "route_table_id": "rtb-060e2963324f9c257",
            "subnet_id": "subnet-00432dd82bc5976b3"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.igw.aws_route_table.rt",
            "module.subnet.aws_subnet.all_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2df5205efa301f5",
            "route_table_id": "rtb-060e2963324f9c257",
            "subnet_id": "subnet-0a5cbc40ee38b57b8"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.igw.aws_route_table.rt",
            "module.subnet.aws_subnet.all_subnets",
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "all_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502157755713:subnet/subnet-00432dd82bc5976b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00432dd82bc5976b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502157755713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Production Subnet-1"
            },
            "tags_all": {
              "Name": "Production Subnet-1"
            },
            "vpc_id": "vpc-0b0228fad0ab16480"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502157755713:subnet/subnet-0a5cbc40ee38b57b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5cbc40ee38b57b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502157755713",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Production Subnet-2"
            },
            "tags_all": {
              "Name": "Production Subnet-2"
            },
            "vpc_id": "vpc-0b0228fad0ab16480"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502157755713:vpc/vpc-0b0228fad0ab16480",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-020900f766d3b9094",
            "default_route_table_id": "rtb-03aac89c7bc075ec9",
            "default_security_group_id": "sg-06b31f96251275759",
            "dhcp_options_id": "dopt-072a913d913bcc0af",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b0228fad0ab16480",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03aac89c7bc075ec9",
            "owner_id": "502157755713",
            "tags": {
              "Name": "Production VPC"
            },
            "tags_all": {
              "Name": "Production VPC"
            }
          }
        }
      ]
    }
  ]
}